[package]
name = "entropy-wasm"
version = "0.1.0"
description = "Entropy"
license = "MIT"
repository = "https://github.com/prongbang/baseb4-resize-wasm"
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"